朝と昼の観察内容入力

--- a/benishijimi_report/benishijimi_report.tex
+++ b/benishijimi_report/benishijimi_report.tex
@@ -77,5 +77,39 @@
 \subsection{23時:糞の観察}
 糞は, やや明るめの焦げ茶色で, 1mm程度の樽型のものが10個ほど確認できた. 
 
+\newpage
+\section{5/12の記録}
+\subsection{9時:特に異常なし}
+思いの外大量の糞をしていたので, 古い食草を捨てるとともに, 掃除. 
+昨日, 枝に登るのに苦労していた個体も, しっかり枝に捕まって静止していた. 
+寸法を測定したところ, どちらも15mm*5mm程度で, 思ったより寸法差はなかった. 
+葉が食われていたが, 表面だけを舐めるような食痕ではなく, 写真\ref{Larba-day2-2}のように, アゲハのような食痕であった. 
+他のブログなどと矛盾するが, 与えている葉が, 柔らかい若い葉であることが要因なのかもしれない. 
+
+\begin{figure}[htbp]
+  \begin{minipage}{0.5\hsize}
+    \begin{center}
+      \includegraphics[width=5cm]{photo2/Larva1.JPG}
+    \end{center}
+    \caption{幼虫1の状態}
+    \label{Larba-day2-1}
+  \end{minipage}
+  \begin{minipage}{0.5\hsize}
+    \begin{center}
+      \includegraphics[width=5cm]{photo2/Larva2.JPG}
+    \end{center}
+    \caption{幼虫2の状態}
+    \label{Larba-day2-2}
+  \end{minipage}
+\end{figure}
+
+\subsection{15時:餌の採取と幼虫の居場所}
+幼虫の採集場所と同じところに, 新しい餌用のスイバを取りに行ったついでに, 
+幼虫を探した. 簡単に, 同じ苗で2匹見つかったが, やはりどちらも, 花に近いところの枝, 花の中で見つかった. 
+やはり, 幼虫はあまり葉にいないのだろうか. 
+家に帰り, ケージ内の幼虫がどこにいるか見たところ, 2匹とも花を避け, 葉の上にべったりとくっついていた. 
+単純に花, 葉というより, 鉛直方向に上を目指す傾向があるだけなのか. 
+よくわからない. 
+
 
 \end{document}
