鶴見川沿いのレポートを追加

--- a/benishijimi_report/benishijimi_report.tex
+++ b/benishijimi_report/benishijimi_report.tex
@@ -31,6 +31,13 @@
 
 同様なポイントを探したところ, すぐ2匹目が見つかった. 
 写真\ref{pic-field}のような, 割とひらけた場所であっさり見つかるようだ. 
+\begin{figure}
+  \begin{center}
+    \includegraphics[width=5cm]{photo/park.JPG}
+  \end{center}
+  \caption{幼虫を発見した公園}
+  \label{pic-field}
+\end{figure}
 最初に見つけた幼虫は, 1cm以上のサイズで, 2匹目の幼虫も, 1cm 弱のサイズで, どちらも終齢か, 4齢程度の幼虫と思われる. 
 この時期は, 発生サイクル的に, 終齢が多い可能性がある. また, 終齢の幼虫は, 葉裏より, 花を食する可能性がある. 
 
@@ -110,6 +117,29 @@
 家に帰り, ケージ内の幼虫がどこにいるか見たところ, 2匹とも花を避け, 葉の上にべったりとくっついていた. 
 単純に花, 葉というより, 鉛直方向に上を目指す傾向があるだけなのか. 
 よくわからない. 
+
+\subsection{16時:鶴見川堤防のギシギシで幼虫を探す}
+会社に行く用事を済ませたのち, 鶴見川沿いの堤防に群生するギシギシに幼虫がいないか探してみた. 
+鶴見川の堤防は, 写真\ref{pic-Tsurumi-River}のような, ギシギシの群生があちこちに見られ, ベニシジミの食草は豊富である. 
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo2/TsurumiRiver.JPG}
+  \end{center}
+  \caption{ギシギシの群生}
+  \label{pic-Tsurumi-River}
+\end{figure}
+また, 定期的な草刈りこそはいるものの, 自然環境としては良好で, 様々な植物が生えている. 
+ところが, 公園ではあっさり見つかった幼虫が, どれだけ探しても見つからなかった. 
+ハグロハバチの幼虫ですら, 見つかりはしたが, 公園と比べると極端に数が少なかった. 
+理由はわからないが, 状況証拠として, 
+\begin{itemize}
+  \item 鶴見川の堤防は, スイバも存在するが, ギシギシが極端に多い
+  \item 鶴見川の堤防は, ギシギシ, スイバ以外に, 背の高い植物が多い
+  \item 鶴見川の堤防は, いつも割と強い風が吹いている
+\end{itemize}
+というような環境要因があり, どうもベニシジミは, ギシギシよりはスイバを好み, 割とひらけていて草がまばらな, 風のそれほど強くない環境を好むのかもしれない. 
+特に, 風については, ベニシジミ幼虫の, しがみつく力の弱さからすると嫌がりそうな気がする. 
+また, ギシギシの葉は, スイバの葉よりも明らかに固そうで, 幼虫が食す上では, あまり好まれそうにない. 
 
 
 \end{document}
