多少変更した.

--- a/benishijimi_report/benishijimi_report.tex
+++ b/benishijimi_report/benishijimi_report.tex
@@ -20,7 +20,7 @@
   \end{center}
 \end{figure}
 
-そのまま, 公園の奥の方にスイバがまばらに生えている方に向かったところ, ほとんど葉がないスイバの, かなり上の方に, ぼてっとした幼虫が写真\ref{pic-sitting-on-branch}のように, とまっているのを発見. 
+そのまま, 公園の奥の方にスイバがまばらに生えている方に向かったところ, ほとんど葉がないスイバの, かなり上の方に, ぼてっとした幼虫が写真\ref{pic-sitting-on-branch}のように, とまっているのを発見(以下幼虫1). 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=5cm]{photo/sitting_on_branch.JPG}
@@ -29,7 +29,7 @@
   \end{center}
 \end{figure}
 
-同様なポイントを探したところ, すぐ2匹目が見つかった. 
+同様なポイントを探したところ, すぐ2匹目(以下幼虫2)が見つかった. 
 写真\ref{pic-field}のような, 割とひらけた場所であっさり見つかるようだ. 
 \begin{figure}[htbp]
   \begin{center}
@@ -38,7 +38,7 @@
   \caption{幼虫を発見した公園}
   \label{pic-field}
 \end{figure}
-最初に見つけた幼虫は, 1cm以上のサイズで, 2匹目の幼虫も, 1cm 弱のサイズで, どちらも終齢か, 4齢程度の幼虫と思われる. 
+幼虫1は, 1cm以上のサイズで, 幼虫2も, 1cm 弱のサイズで, どちらも終齢か, 4齢程度の幼虫と思われる. 
 この時期は, 発生サイクル的に, 終齢が多い可能性がある. また, 終齢の幼虫は, 葉裏より, 花を食する可能性がある. 
 
 \subsection{16時半:飼育環境の構築}
@@ -170,7 +170,7 @@
 もうダメかもしれない. 高熱のダメージがよほど大きかったか. 
 
 \subsection{16時:追加の2匹を捕獲}
-新しく2匹を捕獲した. サイズ感からすると, 3齢か4齢といったところ. 
+新しく2匹を捕獲した. サイズ感からすると, 3齢か4齢といったところ(以下幼虫3,4). 
 
 \subsection{18時:まだ生きている}
 餌を食わない, 糞を出さないことには変わりないが, 汁はでていない. 
@@ -182,17 +182,18 @@
 相変わらず餌食い, 糞はない. 汁はもう出ていない.
 もう死んだかと思っていたが, よ〜く目を凝らしていると, 少しだけ動いているのと, 
 光を当てると反応して動く. 休眠という行為である可能性を信じたい. 
-新しい2匹は相変わらず元気だが, 瀕死の2匹が元気だった頃と比べて, 葉に対する無関心さがひどい. 
+幼虫3, 4は相変わらず元気だが, 幼虫1,2が元気だった頃と比べて, 葉に対する無関心さがひどい. 
+
 同じ公園の中から, 比較的若くて食べやすそうな葉をチョイスしているのだが, もっぱら花ばかり食べている. 
 
 \subsection{17時:餌の中に投下するも}
-もとの2匹のうち, 大きい方は, もう全く動かない. 小さい方は, 目に見えるような動作こそないものの, 
+幼虫1は, もう全く動かない. 幼虫2は, 目に見えるような動作こそないものの, 
 しばらくほっとくと, なかなかの距離を移動しており, 明らかに生きている. しかし餌食い, 糞はない. 
 こちらにも, 花を与え, 花の中においてやった. 
-元気な2匹は, 新しい花を与えるとすぐそちらに移動して食い始めた. 彼らは心配なさそう. 
+幼虫3, 4は, 新しい花を与えるとすぐそちらに移動して食い始めた. 彼らは心配なさそう. 
 
 \subsection{22時:なぜ餌から離れようとする}
-もとの2匹のうち, 大きい方はもう完全に移動がない. 小さい方はやはり移動こそするものの, なぜか食草から距離を取ろうとする. 
+幼虫1はもう完全に移動がない. 幼虫2はやはり移動こそするものの, なぜか食草から距離を取ろうとする. 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=5cm]{photo3/LarvaAwayFromFeed.JPG}
@@ -201,19 +202,19 @@
   \label{pic-LarvaAwayFromFeed}
 \end{figure}
 この動作がなんなのかわからないが, 高熱で脳がやられたか, 何かの予兆かだろう. 
-新しいやつらはあいかわらずもりもり食べている. この2匹は確実に蝶にしたい. 
+幼虫3, 4はあいかわらずもりもり食べている. この2匹は確実に蝶にしたい. 
 
 \section{5/16の記録}
 \subsection{10時:おそらく死んでいる}
-2匹とも全く動かない. 大きい方は色も黒ずんできた. 明日判断しよう. 
-小さい方も, 動きはない. もうダメだと思われる. 
+幼虫1, 2とも全く動かない. 幼虫1は色も黒ずんできた. 明日判断しよう. 
+幼虫2も, 動きはない. もうダメだと思われる. 
 
 \subsection{15時:蛹になるか}
-元気な2匹のうち, 一匹が急にいなくなったと思ったら, キッチンペーパーの裏に移動した. 
+幼虫3が急にいなくなったと思ったら, キッチンペーパーの裏に移動した. 
 何やら縮こまっているので, 前蛹と思われる. 意外と早かった. 
 
 \subsection{22時:前蛹の様子がどうも変}
-前蛹が, 異様に小さい. また, この状態に入ってから変化がなさすぎるのと, 変な色に変化してきた. 
+幼虫3の前蛹が, 異様に小さい. また, この状態に入ってから変化がなさすぎるのと, 変な色に変化してきた. 
 具体的には黄色がかかっている. さらに, 片方だけに, 黒い大きな斑点が見られる. 
 寄生されている可能性が高い. やはり野外で捕獲した幼虫はこんなものか. 
 \begin{figure}[htbp]
@@ -225,7 +226,8 @@
 
 \section{5/17の記録}
 \subsection{12時:死亡判断}
-もう完全に最初の2匹は動かないし, 明らかに干からびている. 死亡と判断した.
+もう完全に幼虫1, 2は動かないし, 明らかに干からびている. 死亡と判断した.
+
 \begin{figure}[htbp]
   \begin{minipage}{0.5\hsize}
     \begin{center}
@@ -242,8 +244,10 @@
     \label{Larba2Dead}
   \end{minipage}
 \end{figure}
-前蛹になったやつは, ますます色が黄色がかってきており, 黒い斑点も大きくなってきた. 
+
+幼虫3の前蛹は, ますます色が黄色がかってきており, 黒い斑点も大きくなってきた. 
 おそらく, 中にハチ, もしくはハエがいる. 
+
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=5cm]{photo4/pupa_parasited.JPG}
@@ -252,7 +256,7 @@
 \end{figure}
 
 \subsection{15時:2匹確保}
-四季の森公園にて, 計3匹の幼虫を見つけた. 一匹はおそらく終齢, もう2匹は2齢程度. 2齢のうち1匹は, 捕獲中に落下してしまったので, 計2匹捕獲. 終齢は, 例のごとく花に貪りついていたが, 2齢の幼虫はどちらも割と苗の中段付近の枝で見つかった. 
+四季の森公園にて, 計3匹の幼虫を見つけた. 一匹はおそらく終齢(以後幼虫5), もう2匹は2齢程度. 2齢のうち1匹は, 捕獲中に落下してしまったので, 計2匹捕獲. 終齢は, 例のごとく花に貪りついていたが, 2齢の幼虫(以後幼虫6)はどちらも割と苗の中段付近の枝で見つかった. 
 割と, 若い幼虫のほうが, 葉裏にいるのかもしれない. 
 \begin{figure}[htbp]
   \begin{minipage}{0.5\hsize}
@@ -270,7 +274,7 @@
 \end{figure}
 
 \subsection{16時:蛆虫がでてきた}
-前蛹を別ケースに移動しておいたが, ケースを見ると, 黄色い蛆虫が高速に移動していた. 
+幼虫3の前蛹を別ケースに移動しておいたが, ケースを見ると, 黄色い蛆虫が高速に移動していた. 
 もう少し気づくのが遅かったら, 家の中を這っていたことだろう. 
 案の定, 黒い斑点があったところに穴が空き, 蛆虫が出てきたようだ. 
 ハエかハチか, 正体を見極めてもいいが, そこまでするのもケースの無駄なので, 水中で死んでもらうことにした. 
@@ -293,8 +297,8 @@
 蛆虫の生命力の高さはしっていたが, 無酸素状態で1時間以上たっているのに, まだ水中で動いている. 
 たいしたものだ. 
 
-\subsection{22時:もう一匹が前蛹になった}
-夕方より, 終齢の一匹が, やたらと食草を離れ, ケースの中をうろつくようになったので, 
+\subsection{22時:幼虫4が前蛹になった}
+夕方より, 幼虫4が, やたらと食草を離れ, ケースの中をうろつくようになったので, 
 もしかしたらと思っていたが, ガラスボウルの蓋に糸を貼り, 前蛹になった. 
 今回は, 特にきになる斑点もないのと, たまたまガラスボウルに付いてくれたので, 観察がしやすく, 
 体内を何かが蠢く様子もないので, おそらく成功だ. 
@@ -304,15 +308,29 @@
   \begin{center}
     \includegraphics[width=5cm]{photo4/prePupa.JPG}
   \end{center}
-  \caption{もう一匹が前蛹になった}
+  \caption{幼虫4が前蛹になった}
 \end{figure}
 
-\subsection{23時:さらにもう一匹が前蛹になった, と思われる}
-もう一匹の終齢幼虫が, 少し気になる動きをした. 先に死んだ2匹にも見られた動作だが, 
+\subsection{23時:幼虫5が前蛹になった, と思われる}
+幼虫5が, 少し気になる動きをした. 先に死んだ2匹にも見られた動作だが, 
 丸まったり, 伸びたり, という, もがいているようにも見える動作である. 
 これは, こいつも危ないか, と思っていたが, その後動作は落ち着いたようで, ただ, キッチンペーパーの上に落ち着いていた. 
 よく見ると, 頭部付近に, 細い筋が見られ, おそらく, 体を固定する糸ではないかと思われる. 
 光を当てても反応しないし, 尾の方を見ると, 水分を出した糞の跡があり, うまくいっていれば, 前蛹, 
 ダメであれば, 寄生中が体内でうごめき出した可能性がある. 
 いずれにしろ, 明日になればわかる. 
+
+\section{5/18の記録}
+\subsection{10時:前蛹ではなかった}
+昨日, もう一匹が前蛹になったと思っていたが, 今朝見ると普通に葉の上にいた. 
+多分ただの休眠期間であったのだろう. まぎらわしい. 
+最初の前蛹は, 明らかに蛹に形状が変わってきており, 今晩にでも変化するのではないだろうか. 
+
+\subsection{15時:異常なし}
+幼虫4の前蛹は, まだ幼虫の形をしているが, 前の寄生されていたやつのように, 変色したり, 染みが出てきたりはしておらず, おそらくもう少し時間がかかるのか. 
+幼虫5も, 葉に張り付いてはいるものの活動がほとんどなく, 蛹化もまもなくだろう. 
+
+\subsection{22時:異常なし}
+幼虫4の前蛹は, まだ変化がない. 幼虫5は, やはり食草から離れ, いろいろなところを動き回っている. 前蛹も近い. 
+
 \end{document}
