5/19のレポート追記

--- a/benishijimi_report/benishijimi_report.tex
+++ b/benishijimi_report/benishijimi_report.tex
@@ -332,5 +332,38 @@
 
 \subsection{22時:異常なし}
 幼虫4の前蛹は, まだ変化がない. 幼虫5は, やはり食草から離れ, いろいろなところを動き回っている. 前蛹も近い. 
+一点気になるとすると, 幼虫5の頭部に近い側にある, 筋である. なんでもなければよいが. 
 
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo5/Larva4-prePupa.JPG}
+  \end{center}
+  \caption{幼虫4の前蛹はまだ変化なし}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo5/Larva5.JPG}
+  \end{center}
+  \caption{幼虫5の頭部に近い方に筋がある}
+\end{figure}
+
+\section{5/19の記録}
+\subsection{10時:幼虫4が蛹化した}
+起きて見ると, 幼虫4が蛹化していた. 脱ぎ捨てた皮が, 下に落ちていた. とりあえず無事成功. 
+幼虫5, 6はあいかわらずである. 
+
+\subsection{14時:異常なし}
+幼虫4の蛹は, 心なしか, 朝よりも色味が黒い部分が多くなり, 蛹らしい見た目に変化しているように見える. 
+幼虫5は, 餌から離れ, キッチンペーパーの上で静止しているが, 体勢的に, まだ前蛹ではなく, 休眠中であろう. 
+幼虫6も, 餌からな離れ, キッチンペーパーの上で静止している. こちらも休眠か. 
+幼虫4のようにガラスボウルで蛹になられるのも管理上微妙なので, 落ち葉に見立てて, 画用紙を切ったものをいれてやった. 
+
+\subsection{19時:異常無し}
+幼虫4の蛹は明らかに黒くなってきた. 
+幼虫5は, 相変わらずうろうろしているが, 蛹化する場所が決まらないのだろうか. 糞もほとんど出していない. 
+幼虫6は, キッチンペーパーの上で静止したまま動かない. 脱皮が近い休眠状態か. 
+
+\subsection{24時:異常無し}
+幼虫5, 6ともにじっとして動かない. 死んでいる風ではないが少し気になる. 
 \end{document}
