5/31までの記録を一気に追加

--- a/benishijimi_report/benishijimi_report.tex
+++ b/benishijimi_report/benishijimi_report.tex
@@ -353,11 +353,32 @@
 起きて見ると, 幼虫4が蛹化していた. 脱ぎ捨てた皮が, 下に落ちていた. とりあえず無事成功. 
 幼虫5, 6はあいかわらずである. 
 
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo6/Larva4-pupa1.JPG}
+  \end{center}
+  \caption{幼虫4の蛹}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo6/Larva4-oldSkin.JPG}
+  \end{center}
+  \caption{幼虫4の脱皮}
+\end{figure}
+
 \subsection{14時:異常なし}
 幼虫4の蛹は, 心なしか, 朝よりも色味が黒い部分が多くなり, 蛹らしい見た目に変化しているように見える. 
 幼虫5は, 餌から離れ, キッチンペーパーの上で静止しているが, 体勢的に, まだ前蛹ではなく, 休眠中であろう. 
 幼虫6も, 餌からな離れ, キッチンペーパーの上で静止している. こちらも休眠か. 
 幼虫4のようにガラスボウルで蛹になられるのも管理上微妙なので, 落ち葉に見立てて, 画用紙を切ったものをいれてやった. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo6/Larva4-pupa2.JPG}
+  \end{center}
+  \caption{幼虫4の蛹がここなしか黒く}
+\end{figure}
 
 \subsection{19時:異常無し}
 幼虫4の蛹は明らかに黒くなってきた. 
@@ -366,4 +387,184 @@
 
 \subsection{24時:異常無し}
 幼虫5, 6ともにじっとして動かない. 死んでいる風ではないが少し気になる. 
+
+\section{5/20の記録}
+\subsection{10時:異常無し}
+幼虫5は, 結局まだ葉を食べている. 幼虫6は全く動かない. 
+幼虫4の蛹は, あれからほとんど変化がない. 
+
+\subsection{11時:幼虫6が脱皮した}
+あまりに動かないので心配していたが, ふと見ると移動しており, 脱皮の皮があった. 
+アゲハなどと比べると結構ゆっくりであるようだ. 結局2日近く動いていなかった. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo7/Larva6-Molting.JPG}
+  \end{center}
+  \caption{幼虫6が脱皮していた}
+\end{figure}
+
+\subsection{15時:幼虫6が動き出した}
+脱皮後, しばらく動いていなかった幼虫6が移動を開始した. 脱皮後も, しばらく動かない期間があるようだ. 
+
+\subsection{20時:異常無し}
+幼虫5は相変わらず落ち着きなくあちこち移動して, そろそろ蛹化か, と思わせておいて結局葉を食っているという動作をつづけている. 幼虫6は, 食草の上を色々移動し, 糞も見られる. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo7/Larva6-Eating.JPG}
+  \end{center}
+  \caption{幼虫6が食草に移動した}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo7/Larva5-Moving.JPG}
+  \end{center}
+  \caption{幼虫5がせわしなく動く}
+\end{figure}
+
+\section{5/21の記録}
+\subsection{22時:幼虫5はようやく前蛹っぽい}
+幼虫5が, キッチンペーパーのまがりによりできたくぼみの中で小さく縮こまったまま動かなくなった. 
+ようやく前蛹か. 
+幼虫6は, 脱皮後の休息も終わって, 忙しなく動き回っている. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo8/Larva5-prePupa.JPG}
+  \end{center}
+  \caption{幼虫5が前蛹}
+\end{figure}
+
+\section{5/22の記録}
+特段変化は何も無し
+
+\section{5/23の記録}
+\subsection{10時:幼虫5の前蛹が少し変化}
+より背中が丸くなり, 筋が目立つようになってきて, 若干黄色味を帯びてきた. 蛆虫が出てきた時の色とは違う. 
+幼虫6は, 水分糞をだしたようだ. 終齢幼虫の蛹化前でなくとも, あるようだ. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo9/Larva5-prePupa.JPG}
+  \end{center}
+  \caption{幼虫5の前蛹が変化してきた}
+\end{figure}
+
+\subsection{12時:幼虫5が蛹化}
+目を離した隙に脱皮が終了し, 完全に蛹になっていた.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo9/Larva5-pupa.JPG}
+  \end{center}
+  \caption{幼虫5が蛹になった}
+\end{figure}
+
+\subsection{18時:幼虫6が動かない}
+幼虫6が, 水様の糞を出して以降, まったく動かない. 少しきになるが, 幼虫1,2 の時の反省と, 脱皮時の休眠期間を考慮し, 
+変に触らず見守ることとする. 
+
+\section{5/24の記録}
+\subsection{23時の記録}
+幼虫6はまったく動かない上に, どんどん小さくなっていく. おそらく死んでいるのであろう. 
+幼虫1,2は, 高温多湿で殺してしまったが, 幼虫6については, 思い当たる節としては, 脱皮直後に, 2日ほど, 
+気温がやたら下がった日があり, これの影響ではないかと考えられる. 
+脱皮直後という極めて体力が消耗している時の気温の変化に耐えられなかったのだろうか. 
+人間で言うところのいわゆる風邪とでもいうのか. 非常に弱い. 
+やはり, 羽化までの成功率をあげるには, 温湿度の管理, UVA程度のほどよい紫外線の照射など, かなり精密に
+環境制御をしてやらないといけないか. 
+
+\section{5/27の記録}
+幼虫6はもう完全にかさかさになり, ごみのようになってしまった. 
+幼虫4の蛹が, 色が突然黒くなった. 羽化の前兆だ. 
+羽化に備えて, 蛹の周りのガラスでは足場として不安定なので, キッチンペーパーで足場を作成してやった. 明日には羽化するだろう. 
+
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo11/Larva4-pupa1.JPG}
+  \end{center}
+  \caption{幼虫4の蛹の色が変わってきた}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo11/Larva4-pupa2.JPG}
+  \end{center}
+  \caption{幼虫4の蛹の色が一気に黒くなった}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo11/Larva4-pupa3.JPG}
+  \end{center}
+  \caption{幼虫4の羽化に備えて足場作成}
+\end{figure}
+
+\section{5/28の記録}
+\subsection{10時:羽化していた}
+幼虫4から羽化しており, すでに羽も伸びきっていた. 
+あまり動きは活発ではないが, 飼育個体のような小ささもなく, 綺麗に羽化している. 
+生殖器の形から, オスであると推測されたが, 羽をなかなか開いてくれないので鱗粉のパターンでの識別は不能. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo12/Larva4-emergence1.JPG}
+  \end{center}
+  \caption{幼虫4の羽化}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo12/Larva4-abdomen.JPG}
+  \end{center}
+  \caption{幼虫4のは多分オス}
+\end{figure}
+
+\subsection{12時:放蝶}
+いつまでも動こうとしないので, さすがに4時間も経てばOKだろうと考え, 放蝶することにした. 
+途中何度か羽を開き, 典型的な夏型のオスであることが確認できた. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo12/Larva4-fly.JPG}
+  \end{center}
+  \caption{幼虫4やっと羽を開いた}
+\end{figure}
+
+\section{5/29の記録}
+\subsection{22時:蛹に羽の輪郭が見えている}
+蛹を見ると, 蝶の羽の輪郭らしき筋が見える. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo13/Larva5-pupa.JPG}
+  \end{center}
+  \caption{幼虫5蛹に蝶の羽の筋が見える}
+\end{figure}
+
+\section{5/31の記録}
+\subsection{18時:幼虫5の蛹が黒くなってきた}
+幼虫4のときと同様に, ある日突然色が変化しだす. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo14/Larva5-pupa.JPG}
+  \end{center}
+  \caption{幼虫5蛹の色が変化しだす}
+\end{figure}
+
+\subsection{21時:急激に色が変化した}
+幼虫4のときと同様に, 数時間の間に一気に真っ黒に変化した. 
+また, 今回も寝ている間に羽化するパターンだろう. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo14/Larva5-pupa2.JPG}
+  \end{center}
+  \caption{幼虫5蛹の色が急激に変化}
+\end{figure}
+
 \end{document}
