幼虫5の羽化

--- a/benishijimi_report/benishijimi_report.tex
+++ b/benishijimi_report/benishijimi_report.tex
@@ -567,4 +567,20 @@
   \caption{幼虫5蛹の色が急激に変化}
 \end{figure}
 
+\section{6/1の記録}
+\subsection{9時:幼虫5が羽化した}
+例のごとく, 羽化がすでに終了していた. 
+おそらくまたオスである. 
+ただ, なぜか前脚が一本折れている. 非常に不自由そうに歩いており, 気の毒である. 
+さらに, この日はあいにくの雨. とはいえ家の中に置いておくのもなんなので, 
+なるべく雨宿りが可能なように放蝶した. 
+これで, 飼育したベニシジミは全て羽化, または途中で死亡した. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo15/Larva5-emergence.JPG}
+  \end{center}
+  \caption{幼虫5羽化した}
+\end{figure}
+
 \end{document}
