2日目のレポート追記

--- a/akatateha_report/akatateha_report.tex
+++ b/akatateha_report/akatateha_report.tex
@@ -71,5 +71,18 @@
   \caption{さらに新しい巣ができていた}
 \end{figure}
 
+\section{6/1の記録}
+\subsection{23時:基本的に巣しか食べないようだ}
+幼虫が餌を食べないなと思っていたが, 基本的に巣に穴を開けるような食べ方しかしないようだ. 
+アカタテハは, 巣にこもりきりなので, 観察があまり面白くない. 
+
+\begin{figure}[htbp]
+  \begin{center}
+    \includegraphics[width=5cm]{photo3/bitemark.JPG}
+  \end{center}
+  \caption{巣に食痕}
+\end{figure}
+
+
 
 \end{document}
