蛹化の記載

--- a/akatateha_report/akatateha_report.tex
+++ b/akatateha_report/akatateha_report.tex
@@ -83,6 +83,16 @@
   \caption{巣に食痕}
 \end{figure}
 
+\section{6/3の記録}
+だいぶ食草がしおれてきており, 交換しようと思っていたところ, 幼虫が巣から這い出して動いていた. 
+さすがに, 食草が枯れてきたら引っ越すようだ. 
+新しい葉で, 巣を作っていたが うまいこと, 若い葉, 大きい葉をまきこんだ巣にできたようで, 
+食べるときはわかい葉を食べていた. いつの間にか少し大きくなっていた. 
 
+\section{6/6の記録}
+前蛹になっていた. 
+
+\section{6/7の記録}
+蛹化していた.
 
 \end{document}
