6/10の記録追記

--- a/monkichou_report/monkichou_report.tex
+++ b/monkichou_report/monkichou_report.tex
@@ -31,5 +31,16 @@
 \subsection{23時:幼虫が動き出した}
 最初に孵化した幼虫(以下幼虫1)が, 孵化後3,4時間程度でうねうね動き出した. こちらには, アカツメクサを与えて育てて見ることとした. 今回, 個体数を半分に分け, 片方はアカツメクサ, もう片方はシロツメクサにし, 何か違いが出るか見てみようと思う. 
 
+\section{6/10の記録}
+\subsection{10時:さらに二つ孵化, 全て黒く}
+二つがさらに孵化した(以下, 幼虫2,3). これらもアカツメクサを与えることにし, 残りは全てシロツメクサとする. 
+幼虫2,3についても, 孵化直後は動きが鈍く, 新しい葉に移動したのは3時間程度経過してからであった. 
+
+\subsection{14時:食痕}
+幼虫1,2,3については, 少しずつ葉に食痕を残し始めている. やはり, 初令の幼虫は, 葉の表面を削り取るように食べるようだ. 
+また, 少し食べては, 葉の中央に移動し, また食べに来ては中央に移動し, という行動を繰り返すようだ. 
+基本的に食べる場所, 休む場所は決まっているようだ. 
+
+
 
 \end{document}
