6/13の観察記録記述

--- a/monkichou_report/monkichou_report.tex
+++ b/monkichou_report/monkichou_report.tex
@@ -41,6 +41,12 @@
 また, 少し食べては, 葉の中央に移動し, また食べに来ては中央に移動し, という行動を繰り返すようだ. 
 基本的に食べる場所, 休む場所は決まっているようだ. 
 
+\section{6/13の記録}
+\subsection{19時:卵, 幼虫2の死亡を確認}
+新たに導入したデジタル顕微鏡を用いて, 卵を確認して見たが, どれも真っ黒になったまま, 孵化しそうにない. 
+無精卵だったか. 
+また, 幼虫2が, 茶色く変色して干からびていた. 幼虫1, 幼虫3が, 明らかに2令になっているサイズなのに, 一つだけ小さいままなので, 変だとは思っていたが, 拡大観察によりわかった. 
+死亡原因は今ひとつよくわからない. 
 
 
 \end{document}
