アカタテハ羽化

--- a/akatateha_report/akatateha_report.tex
+++ b/akatateha_report/akatateha_report.tex
@@ -95,4 +95,10 @@
 \section{6/7の記録}
 蛹化していた.
 
+\section{6/12の記録}
+\subsection{20時:羽化を確認}
+その日の昼まで, 蛹にはまったく変化が見られなかったのに, 気づいたら羽化していた. 
+色の変化などが, 1日の間にあっという間に起きてしまうようだ. 
+なお, 羽化した個体は, メスであった. 
+
 \end{document}
