20日までのレポート追記

--- a/monkichou_report/monkichou_report.tex
+++ b/monkichou_report/monkichou_report.tex
@@ -48,5 +48,62 @@
 また, 幼虫2が, 茶色く変色して干からびていた. 幼虫1, 幼虫3が, 明らかに2令になっているサイズなのに, 一つだけ小さいままなので, 変だとは思っていたが, 拡大観察によりわかった. 
 死亡原因は今ひとつよくわからない. 
 
+\section{6/14の記録}
+\subsection{13時:卵, 幼虫を採取}
+結局2匹になってしまっては実験にならないので, 再び個体を採取しに行くことにした. 
+採卵したとき, いくらでも見つかりそうだったので, ほとんどが孵化していたとしても, 簡単に見つかるだろうと思われたが, 
+思いのほか難航し, 結局卵1(以下幼虫11), 終齢と思われる幼虫1(以下幼虫10), 2齢と思われる幼虫2(以下幼虫8,9)の計4匹にとどまった. 
+この日は昨晩から雨が降り続いており, それにより幼虫がどこかに隠れているのか, そもそもこの孵化という段階でのハードルが, 自然界ともいうべきものなのかはわからない. 
+また晴れた日に探してみることでわかると思われる. 
+なお, 幼虫10以外は, 葉の表面の中央付近で見つかった. 卵の位置は相変わらず. 幼虫10は, さすがに葉の表面に静止できるサイズではなく, 枝にとまっているのを見つけた. 
+
+\section{6/15の記録}
+\subsection{22時:幼虫8が死亡}
+当初の予定通り, 幼虫8,9,11をシロツメクサに移動したものの, 幼虫8について, 気づくと, 給水用のティッシュの上に落下しており, ぐったりとして動かなくなっていた. 
+幼虫の途中を見ると, 一部黒くなっている部分があり, 寄生されているのか, 病死なのかわからない. 
+最初から食べている食草から無理に切り替えようとすると, 幼虫には負担が大きすぎるのかもしれない. 残りの幼虫9, 11も危ないか. 
+幼虫10は, 餌を食べるスピードが速すぎて, アカツメクサがなくなったので, シロツメクサを与えた. 
+
+\section{6/16の記録}
+\subsection{9時:幼虫11が無事に食草移動}
+幼虫11が, アカツメクサからシロツメクサに移動してくれた. 幼虫9はまだ古い葉にしがみついている. 
+幼虫10は, シロツメクサも順調に食べつくし, 禿坊主になっていた. 確かに, 幼虫がほとんど卵から終齢まで無事に育ってしまったら, 河川敷のアカツメクサは, 丸裸になってしまうだろう. 
+現在までの死亡率は納得できなくもない. 
+幼虫10の体に, 何か所か, 左右非対称なうっすらとしたシミがある. やはり寄生虫か. 
+
+\subsection{20時:幼虫の好みがあることがわかってきた}
+幼虫9,幼虫11について, シロツメクサに移動したものの, 食べる勢いがきわめて弱い. アカツメクサを与えてきたほかの幼虫については, 1齢の段階から, 葉にどんどん穴をあけていたのに, 食痕がほとんど見当たらない. どうも, 幼虫もアカツメクサの方を好む可能性がある. 
+今日から, 食草として, シロツメクサ, アカツメクサ両方を置いておいて, どちらに食いつくか, という方向にする. 
+なお, 幼虫10ほど大きくなると, 食欲が好みを超えるようで, どちらでもとにかくバリバリ食べる. 
+また, 今回シロツメクサを食草として与えたときに気づいたが, アカツメクサと比較して, シロツメクサは, そもそも縦に大きく伸びず, 横に枝を伸ばす形であるが故か, 
+水を吸う力が非常に弱いようで, 濡れティッシュに枝を刺すだけではあっという間にしおれてしまう. 
+水をなみなみと含ませた状態を維持できるよう, ペットボトルのキャップを利用した. 
+
+\section{6/17の記録}
+\subsection{15時:幼虫10から寄生虫大発生}
+朝から, 幼虫10が食草を食べずに, あっちに移動してはこっちに移動という仕草を繰り返し, 蛹化かと思ったが, 昼頃みたところ, 
+幼虫の体から, 多くの小さな緑の芋虫が沸いていた. ネットの画像でよく見る, アオムシコマユバチだと思われる. 
+家の中に出て行っても困るので, すぐさま幼虫ごと, 袋に密閉して燃えるゴミへ. 
+
+\section{6/18の記録}
+\subsection{10時:一度シロツメクサに食いつくとアカツメクサになかなか移動しない}
+幼虫9について, シロツメクサに食いついたものの, シロツメクサのしおれる早さゆえに, 一度アカツメクサに移動してもらおうと, 近くに置いたのだが, 
+何度かアカツメクサに移動してはすぐにシロツメクサに戻るという動作をしていた. 変化をあまり好まないようだ. 
+
+\subsection{14時:卵を追加採取}
+たまたま, 通勤中に, 鶴見川沿いのいつもの場所でアカツメクサを見たところ, 卵がすぐに二つ見つかったのでこれらを回収. 幼虫12, 13とする. 
+この時期は, 継続的に繁殖があるようだ. 
+幼虫12は産卵されて間もないのか, 白く, 幼虫13は, 赤かった. 
+
+\section{6/20の記録}
+幼虫1が脱皮, 4齢くらいか. 
+幼虫13が昼くらいに黒くなり, 夜孵化. 黒くなってからは1日以内程度に孵化するようだ. 
+幼虫12は, 濃い黄色となってきている. 
+幼虫3は, 他の個体と比較して, やたらとあちこち動き回る. 湿気がたまらないように昼は蓋を開けておいたが, 幼虫1のケースに移動したり, 
+机の上にはい出したりして, 個体ごとに活発性に差があるようだ. 
+なお, 現時点での餌の振り分けは, 幼虫1,3がアカツメクサ, 幼虫9, 11がシロツメクサとなっている. 
+シロツメクサは, 中山付近では, 鶴見川沿いの畑のそばがもっとも群生しており, さらに大きく成長している. 
+また, アカツメクサとシロツメクサがどちらも生えていることはない. なぜだろうか. 
+アカツメクサが群生している場所にはシロツメクサは一切ないし, シロツメクサが群生しているところにはアカツメクサは一切ない. 
 
 \end{document}
